versions/1.20.4/translated/uk_ua/players/installing-mods.md
---
title: Встановлення модів
description: Покрокова інструкція по установці модів для Fabric.
authors:
  - IMB11
---

# Встановлення модів

Ця інструкція допоможе вам встановити моди для Fabric якщо ви використовуєте лаунчер Minecraft.

Для неофіційних лаунчерів слід ознайомитися з їх документацією.

## 1. Завантаження модів

:::warning
Ви повинні завантажувати моди тільки з джерел, яким ви довіряєте. Додаткову інформацію про пошук модів ви можете знайти в даній інструкції: [Пошук модів](./finding-mods).
:::

Більшість модів також потребує Fabric API, що може бути завантажено з [Modrinth](https://modrinth.com/mod/fabric-api) або [CurseForge](https://curseforge.com/minecraft/mc-mods/fabric-api).

При завантаженні модів переконайтеся, що:

- Вони працюють з версією Minecraft, на якій ви хочете грати. Наприклад, мод що працює на версії 1.20, може не працювати на версії 1.20.2.
- Вони призначені для Fabric, а не для іншого завантажувача модів.
- Вони призначені для правильної версії Minecraft (Java Edition).

## 2. Перемістіть мод в теку `mods`

Папку mods можна знайти в наступних місцях для кожної операційної системи.

Зазвичай ви можете вставити ці шляхи в адресний рядок провідника файлів, щоб швидко перейти до папки.

::: code-group

```:no-line-numbers [Windows]
%appdata%\.minecraft\mods
```

```:no-line-numbers [macOS]
~/Library/Application Support/minecraft/mods
```

```:no-line-numbers [Linux]
~/.minecraft/mods
```

:::

Коли ви знайдете папку `mods`, ви можете перемістити туди файли `.jar` мода.

![Встановлені моди в теці mods](/assets/players/installing-mods.png)

## 3. Готово!

Після встановлення модів в теку `mods` ви можете відкрити лаунчер Minecraft і вибрати профіль Fabric зі спадного списку в нижньому лівому куті та натиснути «Грати»!

![Лаунчер Minecraft з вибраним профілем Fabric](/assets/players/installing-fabric/launcher-screen.png)

## Усунення проблем

Якщо під час виконання цієї інструкції у вас виникнуть проблеми, ви можете звернутися за допомогою в [Діскорд сервері Fabric](https://discord.gg/v6v4pMv) в каналі `#player-support`.

Ви також можете спробувати вирішити проблему самостійно, прочитавши сторінки усунення несправностей:

- [Звіти про збої](./troubleshooting/crash-reports)
- [Поширення логів](./troubleshooting/uploading-logs)
